/**
 * @fileoverview RBAC gRPC å®¢æˆ¶ç«¯
 * 
 * ç”¨æ–¼ Drone æœå‹™èª¿ç”¨ RBAC æœå‹™çš„ gRPC å®¢æˆ¶ç«¯
 * 
 * @module gRPC/Clients/RbacClient
 * @version 1.0.0
 * @author AIOT Team
 */

import * as grpc from '@grpc/grpc-js';
import * as protoLoader from '@grpc/proto-loader';
import path from 'path';
import { fileURLToPath } from 'url';

const __filename = fileURLToPath(import.meta.url);
const __dirname = path.dirname(__filename);

/**
 * RBAC gRPC å®¢æˆ¶ç«¯é¡åˆ¥
 */
export class RbacGrpcClient {
  private client: any;
  private serviceUrl: string;

  constructor() {
    // å¾ç’°å¢ƒè®Šæ•¸ç²å– RBAC æœå‹™åœ°å€
    this.serviceUrl = process.env.RBAC_SERVICE_URL || 'aiot-rbac-service:50051';
    this.initializeClient();
  }

  /**
   * åˆå§‹åŒ– gRPC å®¢æˆ¶ç«¯
   */
  private initializeClient(): void {
    // è¼‰å…¥ RBAC proto æ–‡ä»¶
    const PROTO_PATH = path.join(__dirname, '../../../proto/rbac.proto');
    
    const packageDefinition = protoLoader.loadSync(PROTO_PATH, {
      keepCase: true,
      longs: String,
      enums: String,
      defaults: true,
      oneofs: true,
    });

    const rbacProto = grpc.loadPackageDefinition(packageDefinition) as any;
    
    // å‰µå»º gRPC å®¢æˆ¶ç«¯
    this.client = new rbacProto.rbac.RbacService(
      this.serviceUrl,
      grpc.credentials.createInsecure()
    );

    console.log(`ğŸ”— RBAC gRPC Client initialized: ${this.serviceUrl}`);
  }

  /**
   * ç²å–ä½¿ç”¨è€…è³‡è¨Š
   */
  async getUsers(request: {
    page?: number;
    limit?: number;
  }): Promise<any> {
    return new Promise((resolve, reject) => {
      const req = {
        page: request.page || 1,
        limit: request.limit || 10,
      };

      this.client.GetUsers(req, (error: any, response: any) => {
        if (error) {
          console.error('âŒ RBAC GetUsers error:', error);
          reject(error);
        } else {
          console.log('âœ… RBAC GetUsers success');
          resolve(response);
        }
      });
    });
  }

  /**
   * æ ¹æ“š ID ç²å–ä½¿ç”¨è€…
   */
  async getUserById(userId: number): Promise<any> {
    return new Promise((resolve, reject) => {
      const req = { user_id: userId };

      this.client.GetUserById(req, (error: any, response: any) => {
        if (error) {
          console.error(`âŒ RBAC GetUserById error for user ${userId}:`, error);
          reject(error);
        } else {
          console.log(`âœ… RBAC GetUserById success for user ${userId}`);
          resolve(response);
        }
      });
    });
  }

  /**
   * å‰µå»ºæ–°ä½¿ç”¨è€…
   */
  async createUser(userData: {
    username: string;
    email: string;
    password: string;
  }): Promise<any> {
    return new Promise((resolve, reject) => {
      this.client.CreateUser(userData, (error: any, response: any) => {
        if (error) {
          console.error('âŒ RBAC CreateUser error:', error);
          reject(error);
        } else {
          console.log('âœ… RBAC CreateUser success');
          resolve(response);
        }
      });
    });
  }

  /**
   * é©—è­‰ä½¿ç”¨è€…æ¬Šé™ (ç¤ºä¾‹æ–¹æ³•)
   */
  async validateUserPermission(userId: number, action: string): Promise<boolean> {
    try {
      // å…ˆç²å–ä½¿ç”¨è€…è³‡è¨Š
      const userResponse = await this.getUserById(userId);
      
      if (!userResponse.success) {
        console.log(`âŒ User ${userId} not found`);
        return false;
      }

      // é€™è£¡å¯ä»¥åŠ å…¥æ¬Šé™æª¢æŸ¥é‚è¼¯
      // ä¾‹å¦‚æª¢æŸ¥ä½¿ç”¨è€…è§’è‰²ã€æ¬Šé™ç­‰
      console.log(`âœ… User ${userId} permission validated for action: ${action}`);
      return true;
    } catch (error) {
      console.error(`âŒ Permission validation failed for user ${userId}:`, error);
      return false;
    }
  }

  /**
   * é—œé–‰ gRPC é€£æ¥
   */
  close(): void {
    if (this.client) {
      this.client.close();
      console.log('ğŸ”Œ RBAC gRPC Client connection closed');
    }
  }
}